--- a/scenario.toml
+++ b/scenario.toml
@@ -1,6 +1,7 @@
-# Trigger final assessment run v5
+# Trigger final assessment run v6
 [green_agent]
 agentbeats_id = "019bc152-03ee-7081-a67d-fd979c2b7d94"
+image = "ghcr.io/ychuang2112sub/reasearch-slide-quality-auditor-a2a-green-agent:vAntigravity"
 env = { GEMINI_API_KEY = "${GEMINI_API_KEY}" }
 
 [[participants]]
