chore: add debug output volume for verification

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     platform: linux/amd64
     container_name: green-agent
     command: [ "--host", "0.0.0.0", "--port", "9009", "--card-url", "http://green-agent:9009" ]
+    volumes:
+      - ./debug_output:/app/debug_output
     environment:
       - PYTHONUNBUFFERED=1
       - GEMINI_API_KEY=${GEMINI_API_KEY}
@@ -26,6 +28,8 @@ services:
     platform: linux/amd64
     container_name: agent
     command: [ "--host", "0.0.0.0", "--port", "9009", "--card-url", "http://agent:9009" ]
+    volumes:
+      - ./debug_output:/app/debug_output
     environment:
       - PYTHONUNBUFFERED=1
       - GEMINI_API_KEY=${GEMINI_API_KEY}
