--- a/scenario.toml
+++ b/scenario.toml
@@ -47,7 +47,7 @@ FROM (
     AVG(res.n2s_risk) AS n2s_risk
   FROM results
   CROSS JOIN UNNEST(results.results) AS r(res)
-  GROUP BY results.participants.agent, results.participants.run_id
+  GROUP BY 1, 2
 )
 ORDER BY "Total Score" DESC;
 """
